# colorbubble

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  index.html  shell.nix  watch_wasm.sh
.cargo/: config.toml
assets/colorsplash/: template.kra
docs/: colorsplash.kra
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: delta_time.rs  hsv2rgb.rs  level.rs  lib.rs  main.rs  main_loop.rs  wasm.rs
src/entity/: bubble.rs  game.rs  mod.rs  player.rs  portal.rs  splash.rs
src/rendering/: bubble_renderer.rs  framedata.rs  game_renderer.rs  level_renderer.rs  mod.rs  particle_renderer.rs  player_renderer.rs  quad.rs  quad.wgsl  quad_reference.wgsl  quad_texture.rs  splash_renderer.rs
