[package]
name = "colorbubble"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
wgpu = { version = "24.0.1", default-features = false, features = ["webgl", "wgsl", "metal", "fragile-send-sync-non-atomic-wasm"] }
winit = "0.29.15"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
cfg-if = "1.0.0"
anyhow = "1.0.95"
image = { version = "0.25.5", default-features = false, features = ["png"] }
bevy_math = { version = "0.15.1", default-features = false }
rand = { version = "0.8.5" }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
