[workspace]
members = ["shaders"]

[package]
name = "colorbubble"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
wgpu = { version = "25.0.2", default-features = false, features = ["vulkan", "webgl", "wgsl", "metal", "fragile-send-sync-non-atomic-wasm"] }
winit = "0.30.11"
pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = { version = "0.30.10", features = ["bytemuck"] }
anyhow = "1.0.95"
image = { version = "0.25.5", default-features = false, features = ["png"] }
bevy_math = { version = "0.18.0", default-features = false, features = ["std"] }
rand = { version = "0.9.1" }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build-dependencies]
# cargo gpu branch naga2 https://github.com/Rust-GPU/cargo-gpu/pull/100
cargo-gpu-install = { git = "https://github.com/rust-gpu/cargo-gpu", rev = "f2f9ec684500928c74f6e78406997938db8f57ff" }
env_logger = "0.11.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
