[package]
name = "colorbubble-shaders"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# rust-gpu branch naga https://github.com/Rust-GPU/rust-gpu/pull/280
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", rev = "0209a20cd4c4291b21fa30f212ca702e5f24552d", features = ["bytemuck"] }
glam = { version = "0.30.10", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }
